# kina

./: .gitignore  .gitleaks-baseline.json  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  mise.toml  rustfmt.toml
.beads/: issues.jsonl
.beads/export-state/: 0b73dec5048b135b.json
.bees/: config.json  issues.jsonl
.claudio/: README.md  getting-started.md  implementation-plan.md  kina-node-image-plan.md  phase_status.md  plan.md  status.md  summary.md  task-coordination.md
.claudio/docs/: README.md  apple-container-k8s-implementation-plan.md  apple-container-networking-capabilities.md  architecture-analysis.md  csr-approval-cilium-cni-fix-plan.md  csr-auto-approval-fix-plan.md  custom_node_oci_images.md  discovery.md  integration-analysis.md  prd.md  single-node-cluster-test-plan.md  structure-analysis.md  technology-analysis.md
.claudio/phase1/: phase_status.md  tasks.md
.claudio/phase2/: phase_status.md  tasks.md
.claudio/phase3/: phase_status.md  tasks.md
.claudio/phase4/: phase_status.md  tasks.md
.claudio/phase5/: phase_status.md  tasks.md
.claudio/research/: cni-cilium-integration.md
.claudio/shared/: agents_tracking.json  commands_tracking.json  extended_context_tracking.json
.github/: dependabot.yml
.github/workflows/: ci.yml  kernel-build.yml  macos-integration.yml  release.yml
docs/: default_cni_kina_15-6.md  kubelet-csr-auto-approval.md  original_prompt.md
docs/development/: custom-kernel.md  testing-rust-cli.md
docs/planning/: beads-backlog-archive.json  (+1 more)
kina-cli/: .gitignore  Cargo.toml  build.rs
kina-cli/examples/: demo_test_plan.md
kina-cli/examples/demos/: README.md
kina-cli/examples/demos/cnpg-app/: README.md  app.yaml  cluster.yaml  route.yaml
kina-cli/examples/demos/cnpg-service/: README.md  cluster.yaml  tcp-route.yaml
kina-cli/examples/demos/js-dos-doom/: Dockerfile  README.md  gatewayapi.yaml  ingress.yaml
kina-cli/examples/demos/kagent-app/: README.md  values-kina.yaml
kina-cli/examples/demos/kagent-app/manifests/: agent-hello.yaml  modelconfig-ollama.yaml
kina-cli/examples/demos/kube-doom/: Dockerfile.novnc  README.md  gatewayapi.yaml  ingress.yaml
kina-cli/examples/demos/minecraft/: README.md  gatewayapi.yaml  ingress.yaml
kina-cli/examples/demos/ut99/: README.md  gatewayapi.yaml  ingress.yaml
kina-cli/examples/gatewayapi/: README.md  cross-namespace-referencegrant.yaml  deploy-examples.sh  http-basic.yaml  http-virtual-hosts.yaml  tcp-route.yaml  udp-route.yaml
kina-cli/examples/ingress/: README.md  basic-web-app.yaml  deploy-examples.sh  multi-service-routing.yaml  virtual-hosts.yaml
kina-cli/examples/ingress/kina-cli/examples/ingress/: basic-web-app.yaml  multi-service-routing.yaml  virtual-hosts.yaml
kina-cli/images/: Dockerfile  build-node-image.sh
kina-cli/images/kina-node/: Dockerfile  build.sh  kina-node-init.sh
kina-cli/manifests/: bridge-cni.yaml  cilium-apple-container-patch.yaml  cilium-apple-container.yaml  cilium.yaml  demo-app-ingress.yaml  demo-app-route.yaml  demo-app.yaml  kindnetd.yaml
kina-cli/manifests/metrics-server/: components.yaml
kina-cli/manifests/nginx-gateway-fabric/: deploy.yaml  gateway.yaml  ngf-crds.yaml  nginxproxy.yaml
kina-cli/manifests/nginx-ingress/: nginx-ingress-daemonset.yaml
kina-cli/manifests/traefik/: gateway.yaml  ns-and-sa.yaml  rbac.yaml  traefik-config.yaml  traefik-daemonset.yaml
kina-cli/scripts/: apply-cilium-patch.sh  kina-dev.sh  kina.sh  restore-cilium-full.sh
kina-cli/src/: lib.rs  main.rs  version.rs
kina-cli/src/cli/: build.rs  cluster.rs  config_cmd.rs  mod.rs
kina-cli/src/config/: cluster_config.rs  mod.rs
kina-cli/src/core/: apple_container.rs  apple_provider.rs  cluster.rs  kernel_fetch.rs  kubernetes.rs  mod.rs  node_image_builder.rs  provider.rs  types.rs  verify.rs
kina-cli/src/errors/: mod.rs
kina-cli/src/utils/: mod.rs
kina-cli/templates/: ptp-cni.conflist
kina-cli/tests/: cilium_install_tests.rs  cli_tests.rs  config_tests.rs  container_compat_tests.rs  host_reachability_tests.rs  ingress_addon_tests.rs  kernel_ebpf_tests.rs  kernel_fetch_tests.rs  load_image_tests.rs  nginx_gateway_fabric_addon_tests.rs  node_image_build_tests.rs  release_meta_tests.rs  resource_limits_tests.rs  traefik_addon_tests.rs  verify_cmd_tests.rs  verify_hardening_tests.rs  version_modernization_tests.rs  version_provenance_tests.rs
kina-cli/tests/fixtures/: fake-container.sh  test-config.toml
scripts/: ci.nu  colima-start.nu  colima-stop.nu  container-start.nu  gitleaks-colima.nu  gitleaks-docker.nu  gitleaks-stop.nu  gitleaks.nu  image-build.nu  image-test.nu  k8s-check.nu  kina-use.nu  pre-commit.nu  test-action-pr.nu  test-action-push.nu  test-action.nu  test-cluster-cleanup.nu  test-cluster-hosts.nu  test-cluster-multi.nu  test-cluster-ptp-dns.nu  test-cluster-validate.nu  test-cluster.nu
(+97 files in other folders)
